# amoe

./: .gitignore  CMakeLists.txt  README.md  amoe.conf  main.cpp
algorithms/: fcfs.cpp  fcfs.h  hybrid.cpp  hybrid.h  lru.cpp  lru.h  optimal.cpp  optimal.h
audit/: audit_reader.cpp  audit_reader.h  logger.cpp  logger.h
common/: types.h  utils.cpp  utils.h
config/: config.cpp  config.h
decision/: engine.cpp  engine.h
monitor/: tracker.cpp  tracker.h
security/: permissions.cpp  permissions.h  safety.cpp  safety.h
system/: process_manager.cpp  process_manager.h
ui/: cli.cpp  cli.h
